force-app/main/default/objects/Needs_Analysis_Cache__c/Needs_Analysis_Cache__c.object-meta.xml
<CustomObject>
    <label>ニーズ分析キャッシュ</label>
    <nameField>
        <displayFormat>NAC-{0000}</displayFormat>
        <label>キャッシュ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ニーズ分析キャッシュ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>