force-app/main/default/objects/Needs_Analysis_Cache__c/fields/Analysis_Text__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Text__c</fullName>
    <label>分析テキスト</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>