force-app/main/default/objects/Needs_Analysis_Cache__c/fields/Card_Count__c.field-meta.xml
<CustomField>
    <fullName>Card_Count__c</fullName>
    <label>カード件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>