force-app/main/default/objects/Needs_Analysis_Cache__c/fields/Card_Ids_Json__c.field-meta.xml
<CustomField>
    <fullName>Card_Ids_Json__c</fullName>
    <label>カードIDリストJSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>