force-app/main/default/objects/Needs_Analysis_Cache__c/fields/Default_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Product_Id__c</fullName>
    <label>デフォルト製品ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>