force-app/main/default/objects/Needs_Analysis_Cache__c/fields/Filter_Key__c.field-meta.xml
<CustomField>
    <fullName>Filter_Key__c</fullName>
    <externalId>true</externalId>
    <label>フィルターキー</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>