force-app/main/default/objects/Needs_Analysis_Cache__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <label>生成日時</label>
    <type>DateTime</type>
</CustomField>