force-app/main/default/objects/Needs_Analysis_Cache__c/fields/Products_Json__c.field-meta.xml
<CustomField>
    <fullName>Products_Json__c</fullName>
    <label>製品オプションJSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>