force-app/main/default/objects/Needs_Analysis_Cache__c/fields/Suggestion_What__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_What__c</fullName>
    <label>施策ドラフト概要</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>