force-app/main/default/objects/Needs_Analysis_Cache__c/fields/Suggestion_Why__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Why__c</fullName>
    <label>施策ドラフト根拠</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>